feat: get user information
